change extension to .twig

--- a/apps/backend/views/view_default/detail.twig
+++ b/apps/backend/views/view_default/detail.twig
@@ -32,7 +32,7 @@
                                     <td width="33%"><b>{{ view['label'] }}</b></td>
                                     <td>
                                         {# check type and render with type #}
-                                        {% include 'view_default/fields_type_detail.tpl' %}
+                                        {% include 'view_default/fields_type_detail.twig' %}
                                     </td>
                                 </tr>
                             {% endfor %}
