--- a/apps/backend/views/view_default/edit.twig
+++ b/apps/backend/views/view_default/edit.twig
@@ -27,7 +27,7 @@
                         {% endif %}
 
                         {# check type and render with type #}
-                        {% include 'view_default/fields_type_edit.tpl' %}
+                        {% include 'view_default/fields_type_edit.twig' %}
 
                         <div class="box-footer">
                             <button type="reset" class="btn pull-right" name="action">{{ t._('Cancel') }}</button>
