--- a/apps/backend/views/view_default/list.twig
+++ b/apps/backend/views/view_default/list.twig
@@ -63,7 +63,7 @@
                                                     {% for name, view in list_view['fields'] %}
                                                         <td>
                                                             {# check type and render with type #}
-                                                            {% include 'view_default/fields_type_list.tpl' %}
+                                                            {% include 'view_default/fields_type_list.twig' %}
                                                         </td>
                                                     {% endfor %}
 
