--- a/apps/backend/views/settings/config.twig
+++ b/apps/backend/views/settings/config.twig
@@ -18,7 +18,11 @@
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">{{ t._(conf) }}</label>
                                 <div class="col-sm-10">
-                                    <input type="text" name="{{ key }}[{{ conf }}]" class="form-control" value="{{ config.application[conf] }}">
+                                    {% if conf == 'theme' %}
+                                        {{ select(conf, themes, 'value': config.application[conf], 'class': 'form-control') }}
+                                    {% else %}
+                                        <input type="text" name="{{ key }}[{{ conf }}]" class="form-control" value="{{ config.application[conf] }}">
+                                    {% endif %}
                                 </div>
                             </div>
                         {% endfor %}
