--- a/apps/backend/views/builder/create_model.twig
+++ b/apps/backend/views/builder/create_model.twig
@@ -13,18 +13,41 @@
                     <div class="box-body">
                         <div class="form-group">
                             <label class="col-sm-2 control-label">
-                                {{ t._('Model Name') }}
+                                {{ t._('Backend or Front-end') }}
                             </label>
                             <div class="col-sm-10">
-                                <input id="model_name-control" name="model_name" class="form-control" type="text" value="" />
-                                (ex: Accounts => table in database accounts)
+                                <select name="main_module" class="form-control">
+                                    <option>backend</option>
+                                    <option>front-end</option>
+                                    <option>core</option>
+                                </select>
                             </div>
                         </div>
 
-                        <div class="box-footer">
-                            <button type="reset" class="btn pull-right" name="action" onclick="location.href='{{ url('/'~ carofw['backendUrl'] ~'/builder') }}'">{{ t._('Cancel') }}</button>
-                            <button id="submit-button" type="submit" class="btn btn-info pull-right" name="action" style="margin-right: 5px;">{{ t._('Save') }}</button>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">
+                                {{ t._('Module name') }}
+                            </label>
+                            <div class="col-sm-10">
+                                <input id="module_name-control" name="module_name" class="form-control" type="text" value="" />
+                                create folder in backend/src or frontend/src
+                            </div>
                         </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">
+                                {{ t._('Model name') }}
+                            </label>
+                            <div class="col-sm-10">
+                                <input id="model_name-control" name="model_name" class="form-control" type="text" value="" />
+                                ex: Accounts => table in database accounts
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="box-footer">
+                        <button type="reset" class="btn pull-right" name="action" onclick="location.href='{{ url('/'~ carofw['backendUrl'] ~'/builder') }}'">{{ t._('Cancel') }}</button>
+                        <button id="submit-button" type="submit" class="btn btn-info pull-right" name="action" style="margin-right: 5px;">{{ t._('Save') }}</button>
                     </div>
                 {{ end_form() }}
             </div>
