--- a/apps/common/layouts/backend/empty.twig
+++ b/apps/common/layouts/backend/empty.twig
@@ -23,6 +23,8 @@
     <!-- Alert -->
     <link rel="stylesheet" href="{{ static_url() }}/themes/backend/css/sweetalert.css">
 
+    <link rel="shortcut icon" href="{{ url() }}/favicon.ico" type="image/x-icon">
+
     <script>
         var base_url = '{{ url() }}';
         var backend_url = '{{ url('/' ~ carofw['backendUrl']) }}';
