--- a/apps/common/layouts/caro/document.twig
+++ b/apps/common/layouts/caro/document.twig
@@ -13,6 +13,9 @@
     <script src="{{ static_url(theme_uri) }}/js/html5.js"></script>
     <![endif]-->
     <link href="{{ static_url(theme_uri) }}/font-awesome/css/font-awesome.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="{{ url() }}/favicon.ico" type="image/x-icon">
+
     <style>
         * {
             font-family: "Gotham Rounded A","Gotham Rounded B","Helvetica Neue",Helvetica,Arial,sans-serif,"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;
