--- a/apps/common/layouts/caro/default.twig
+++ b/apps/common/layouts/caro/default.twig
@@ -14,6 +14,8 @@
     <![endif]-->
     <link href="{{ static_url(theme_uri) }}/font-awesome/css/font-awesome.css" rel="stylesheet">
 
+    <link rel="shortcut icon" href="{{ url() }}/favicon.ico" type="image/x-icon">
+
     <script src="{{ static_url(theme_uri) }}/js/jquery.min.js"></script>
     <script src="{{ static_url(theme_uri) }}/js/ZeroClipboard/ZeroClipboard.js"></script>
 </head>
