fixed ui setting

--- a/apps/backend/views/settings/index.twig
+++ b/apps/backend/views/settings/index.twig
@@ -6,27 +6,36 @@
                     <i class="fa fa-cog"></i>
                     <h3 class="box-title">{{ t._('Settings') }}</h3>
                 </div><!-- /.box-header -->
+
                 <div class="box-body">
-                    <a href="{{ url('/'~ carofw['backendUrl'] ~'/settings/repair') }}" class="btn btn-app">
-                        <i class="fa fa-database"></i> {{ t._('Repair Database') }}
+
+                    <a href="{{ url('/'~ carofw['backendUrl'] ~'/settings/clear_cache') }}" class="btn btn-app">
+                        <i class="fa fa-refresh"></i> {{ t._('Clear Cache') }}
                     </a>
 
-                    <a href="{{ url('/'~ carofw['backendUrl'] ~'/settings/rebuild_resources') }}" class="btn btn-app">
-                        <i class="fa fa-wrench"></i> {{ t._('Rebuild ACL Resource') }}
+                    <a href="{{ url('/'~ carofw['backendUrl'] ~'/settings/config') }}" class="btn btn-app">
+                        <i class="fa fa-wrench"></i> {{ t._('Page Config') }}
                     </a>
 
                     <a href="{{ url('/'~ carofw['backendUrl'] ~'/settings/mail_config') }}" class="btn btn-app">
                         <i class="fa fa-envelope"></i> {{ t._('Mail Config') }}
                     </a>
 
-                    <a href="{{ url('/'~ carofw['backendUrl'] ~'/users/register_roles') }}" class="btn btn-app">
-                        <i class="fa fa-users"></i> {{ t._('Register Roles') }}
-                    </a>
-
                     <a href="{{ url('/'~ carofw['backendUrl'] ~'/builder/import_csv') }}" class="btn btn-app">
                         <i class="fa fa-exchange"></i> {{ t._('Import CSV') }}
                     </a>
 
+                    <a href="{{ url('/'~ carofw['backendUrl'] ~'/users/register_roles') }}" class="btn btn-app">
+                        <i class="fa fa-users"></i> {{ t._('Register Roles') }}
+                    </a>
+
+                    <a href="{{ url('/'~ carofw['backendUrl'] ~'/settings/rebuild_resources') }}" class="btn btn-app">
+                        <i class="fa fa-wrench"></i> {{ t._('Rebuild ACL Resource') }}
+                    </a>
+
+                    <a href="{{ url('/'~ carofw['backendUrl'] ~'/settings/repair') }}" class="btn btn-app">
+                        <i class="fa fa-database"></i> {{ t._('Repair Database') }}
+                    </a>
 
                 </div><!-- /.box-body -->
             </div><!-- /.box -->
