--- a/apps/backend/views/view_default/detail.twig
+++ b/apps/backend/views/view_default/detail.twig
@@ -31,6 +31,11 @@
                                 <tr>
                                     <td width="33%"><b>{{ view['label'] }}</b></td>
                                     <td>
+                                        {#set path from path core#}
+                                        {% if module_name %}
+                                            <?php $this->view->setPartialsDir('../../../views/'); ?>
+                                        {% endif %}
+
                                         <?php if (is_file(APP_PATH . 'apps/backend/views/view_custom/fields/' . $view['type'] . '/detail.twig')) { ?>
                                             {{ partial('view_custom/fields/' ~ view['type'] ~ '/detail') }}
                                         <?php } else if (is_file(APP_PATH . 'apps/backend/views/view_default/fields/' . $view['type'] . '/detail.twig')) { ?>
