--- a/apps/backend/views/view_default/edit.twig
+++ b/apps/backend/views/view_default/edit.twig
@@ -4,10 +4,10 @@
         {{ title }}
     </h1>
     <ol class="breadcrumb">
-        <li><a href="{{ url('/'~carofw['backendUrl']~'/'~controller) }}">{{ t._('List') }}</a></li>
+        <li><a href="{{ url('/'~carofw['backendUrl']~'/'~controller) }}" class="btn btn-default btn-xs">{{ t._('List') }}</a></li>
         {% if extra_view_menus is defined %}
             {% for m in extra_view_menus %}
-                <li><a href="{{ url('/'~carofw['backendUrl']~m['url']) }}">{{ t._(m['label']) }}</a></li>
+                <li><a href="{{ url('/'~carofw['backendUrl']~m['url']) }}" class="btn btn-default btn-xs">{{ t._(m['label']) }}</a></li>
             {% endfor %}
         {% endif %}
     </ol>
