--- a/apps/backend/views/layouts/default.twig
+++ b/apps/backend/views/layouts/default.twig
@@ -198,9 +198,9 @@
 
 <footer class="main-footer">
     <div class="pull-right hidden-xs">
-        <b>Version</b> 0.1
+        <b>Version</b> 1.0
     </div>
-    <strong>Copyright &copy; 2015 <a href="">Jacky</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2015 <a href="http://carodev.com">CaroDev.com</a>.</strong> All rights reserved.
 </footer>
 
 <!-- Bootstrap 3.3.5 -->
