--- a/apps/frontend/views/caro/layouts/default.twig
+++ b/apps/frontend/views/caro/layouts/default.twig
@@ -28,7 +28,7 @@
             <div class="col-lg-12">
                 <br><br>
                 <p class="pull-right">
-                    ©Copyright 2015 Jacky - CaroCRM<sup>TM</sup>. &nbsp;
+                    ©Copyright 2015 CaroDev<sup>TM</sup>. &nbsp;
                     <a href="http://www.bootply.com">Template from Bootply</a>
                 </p>
                 <br><br>
